--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Javascript Cart</title>
-  </head>
-  <body>
+    <title>Shopping Cart</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <script src="cart.js"></script>
+  </head>
+
+  <body class="bg-dark text-white">
+    <div class="container">
+      <!-- Product -->
+      <div class="row">
+        <div class="col-md-6 mt-3">
+          <h1 class="fs-1">Ipad Pro</h1>
+          <p id="ipad-price">799</p>
+        </div>
+        <div class="col-md-3 d-flex justify-items-center align-items-center">
+          <button class="btn btn-primary mx-1">+</button>
+          <input
+            type="number"
+            id="ipad-qty"
+            value="1"
+            class="mx-1 form-control"
+          />
+          <button class="btn btn-primary mx-1">-</button>
+        </div>
+        <div
+          class="pt-3 col-md-3 d-flex justify-content-end fs-5 align-items-center"
+        >
+          <p id="ipad-total">$799</p>
+        </div>
+      </div>
+      <hr />
+      <!-- Total -->
+      <div class="row">
+        <div class="d-flex justify-content-between fs-5">
+          <span>Subtotal:</span>
+          <span id="subtotal">$768</span>
+        </div>
+        <!-- <div class="d-flex justify-content-between fs-5">
+          <span>VAT:</span>
+          <span>$76.8</span>
+        </div> -->
+        <hr />
+        <div class="d-flex justify-content-between fs-5">
+          <span>Total:</span>
+          <span id="total">$76.8</span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
