--- a/index.html
+++ b/index.html
@@ -17,25 +17,72 @@
   <body class="bg-dark text-white">
     <div class="container">
       <!-- Product -->
+
       <div class="row">
         <div class="col-md-6 mt-3">
           <h1 class="fs-1">Ipad Pro</h1>
-          <p id="ipad-price">799</p>
+          <span>Unit price:</span>
+          <p>$<span id="ipad_pro-price">799</span></p>
         </div>
+
         <div class="col-md-3 d-flex justify-items-center align-items-center">
-          <button class="btn btn-primary mx-1">+</button>
+          <button
+            class="btn btn-primary mx-1"
+            onclick="updateSingleProduct('ipad_pro',true)"
+          >
+            +
+          </button>
           <input
             type="number"
-            id="ipad-qty"
-            value="1"
+            id="ipad_pro-qty"
+            value="0"
             class="mx-1 form-control"
           />
-          <button class="btn btn-primary mx-1">-</button>
+          <button
+            class="btn btn-primary mx-1"
+            onclick="updateSingleProduct('ipad_pro',false)"
+          >
+            -
+          </button>
         </div>
         <div
           class="pt-3 col-md-3 d-flex justify-content-end fs-5 align-items-center"
         >
-          <p id="ipad-total">$799</p>
+          <p id="ipad_pro-total">0</p>
+        </div>
+      </div>
+
+      <!-- Second Product -->
+      <div class="row">
+        <div class="col-md-6 mt-3">
+          <h1 class="fs-1">Ipad Air</h1>
+          <span>Unit price:</span>
+          <p id="ipad_air-price">599</p>
+        </div>
+        <div class="col-md-3 d-flex justify-items-center align-items-center">
+          <button
+            class="btn btn-primary mx-1"
+            onclick="updateSingleProduct('ipad_air',true)"
+          >
+            +
+          </button>
+          <input
+            type="number"
+            id="ipad_air-qty"
+            value="0"
+            class="mx-1 form-control"
+          />
+          <button
+            class="btn btn-primary mx-1"
+            onclick="updateSingleProduct('ipad_air',false)"
+          >
+            -
+          </button>
+        </div>
+        <div
+          class="pt-3 col-md-3 d-flex justify-content-end fs-5 align-items-center"
+        >
+          <p id="ipad_air-total">0</p>
         </div>
       </div>
       <hr />
@@ -43,16 +90,16 @@
       <div class="row">
         <div class="d-flex justify-content-between fs-5">
           <span>Subtotal:</span>
-          <span id="subtotal">$768</span>
+          <span id="subtotal">0</span>
         </div>
-        <!-- <div class="d-flex justify-content-between fs-5">
+        <div class="d-flex justify-content-between fs-5">
           <span>VAT:</span>
-          <span>$76.8</span>
-        </div> -->
+          <span id="vat">0</span>
+        </div>
         <hr />
         <div class="d-flex justify-content-between fs-5">
           <span>Total:</span>
-          <span id="total">$76.8</span>
+          <span id="total">0</span>
         </div>
       </div>
     </div>
